--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
+    "supertest": "^6.1.3",
     "terser-webpack-plugin": "^5.1.1",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
